--- a/css/styles.css
+++ b/css/styles.css
@@ -3,10 +3,58 @@ body {
   color: #434455;
   background-color: #fff;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.container {
+  max-width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.page-header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.contact-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
 
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -23,11 +71,18 @@ a {
   color: #4d5ae5;
 }
 
+.header-logo {
+  padding: 24px 0;
+  margin-right: 76px;
+}
+
 .header-logo .logo-part {
   color: #2e2f42;
 }
 
 .nav-link {
+  display: block;
+  padding: 24px 0;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -44,9 +99,12 @@ a {
 
 .contact {
   font-style: normal;
+  margin-left: auto;
 }
 
 .contact-link {
+  display: block;
+  padding: 24px 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -55,6 +113,7 @@ a {
 
 .page-footer {
   background-color: #2e2f42;
+  padding: 100px 0;
 }
 
 .footer-logo .logo-part {
@@ -67,14 +126,24 @@ a {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-top: 16px;
   color: #f4f4fd;
 }
 
 .section-solutions {
+  display: flex;
+  justify-content: center;
+  padding-top: 188px;
+  padding-bottom: 188px;
+  align-items: center;
+  max-width: 100%;
   background-color: #2e2f42;
 }
 
 .header-solutions {
+  display: block;
+  width: 496px;
+  margin-bottom: 48px;
   font-weight: 700;
   font-size: 56px;
   line-height: 1.07;
@@ -84,11 +153,15 @@ a {
 }
 
 .button-solutions {
+  display: block;
+  margin: 0 auto;
+  border-radius: 4px;
+  border: none;
+  padding: 16px 32px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  vertical-align: middle;
   cursor: pointer;
   background-color: #4d5ae5;
   color: #ffffff;
@@ -100,12 +173,43 @@ a {
   color: #ffffff;
 }
 
+/* hidden */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.section-features {
+  padding: 120px 0;
+}
+
+.features-block {
+  display: flex;
+}
 .features-strategy {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  margin-bottom: 8px;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+
+.features-item {
+  width: 264px;
+}
+
+.features-list {
+  display: flex;
+  gap: 24px;
 }
 
 .features-text {
@@ -123,13 +227,25 @@ a {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .section-team {
+  padding-top: 120px;
+  padding-bottom: 120px;
   background-color: #f4f4fd;
 }
 
-.team-fio {
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+.team-info-block {
+  display: block;
+  width: 264px;
+  padding: 32px 16px;
+}
+.team-member {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -141,16 +257,22 @@ a {
 .team-work {
   font-size: 16px;
   line-height: 1.5;
+  margin-top: 8px;
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
 }
 
 .team-item {
+  display: block;
+  height: 380px;
+  width: 264px;
+  border-radius: 0 0 4px 4px;
   background-color: #ffffff;
 }
 
 .header-port {
+  display: block;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -158,8 +280,19 @@ a {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
+}
+.section-port {
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
 
+.port-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
 .port-desk {
   font-weight: 500;
   font-size: 20px;
@@ -168,9 +301,27 @@ a {
   color: #2e2f42;
 }
 
+.port-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.port-name {
+  display: block;
+  padding: 32px 16px;
+  line-height: 1.5;
+  border-left: 1px solid #e7e9fc;
+  border-right: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
+}
+
 .port-text {
+  margin-top: 8px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+}
+footer-container {
+  display: block;
+  width: 264px;
 }
