--- a/css/styles.css
+++ b/css/styles.css
@@ -111,25 +111,6 @@ a {
   color: #434455;
 }
 
-.page-footer {
-  background-color: #2e2f42;
-  padding: 100px 0;
-}
-
-.footer-logo .logo-part {
-  color: #f4f4fd;
-}
-
-.footer-text {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  margin-top: 16px;
-  color: #f4f4fd;
-}
-
 .section-solutions {
   display: flex;
   justify-content: center;
@@ -174,6 +155,7 @@ a {
 }
 
 /* hidden */
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -321,7 +303,28 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
 }
-footer-container {
+/* footer */
+
+.footer-container {
   display: block;
   width: 264px;
+}
+
+.footer-logo .logo-part {
+  color: #f4f4fd;
+}
+
+.footer-text {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-top: 16px;
+  color: #f4f4fd;
+}
+
+.page-footer {
+  background-color: #2e2f42;
+  padding: 100px 0;
 }
