update styles to fix 3 errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,7 +120,8 @@ img {
 
 .header-solutions {
   display: block;
-  width: 496px;
+  max-width: 496px;
+  min-width: 169px;
   margin-bottom: 48px;
   font-weight: 700;
   font-size: 56px;
@@ -272,6 +273,7 @@ img {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
   color: #2e2f42;
 }
 
