--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,7 @@ img {
 .button-solutions {
   display: block;
   margin: 0 auto;
+  min-width: 169px;
   border-radius: 4px;
   border: none;
   padding: 16px 32px;
